# plankapy

./: .dockerignore  .gitignore  404.html  Dockerfile  README.md  __init__.py  controllers.py  docker-compose.yml  index.html  mkdocs.yml  objects.inv  plankapy.py  pyproject.toml  setup.py  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation-request.md  feature_request.md
.github/workflows/: build-docker-image.yml  build-docker.yml  docs.yml  pdoc.yml  python-publish.yml
auth/BaseAuth/: index.html
auth/PasswordAuth/: index.html
auth/TokenAuth/: index.html
changelog/: index.html
cli/: README.md  __init__.py
cli/cli/: index.html
config/: planka_routes.json  planka_templates.json  templates.json
constants/constants/: index.html
contributing/: index.html
dev/: README.md  build_api.py  build_test_project.py
docs/: cli.md  examples.md  helpers.md  interfaces.md  models.md  routes.md
docs/api_docs/: handlers.md
docs/constants/: constants.md
docs/interfaces/: Archive.md  Attachment.md  BoardMembership.md  Card.md  CardLabel.md  CardMembership.md  Label.md  Notification.md  Project.md  Stopwatch.md  Task.md  User.md
docs/models/: QueryableList.md
docs/v2/: interface.md  utils.md
examples/: async.py  busybox.py  index.html  list_portal.py  rolling_todo_cards.py  v2_examples.py
helpers/helpers/: index.html
interfaces/Action/: index.html
interfaces/Archive/: index.html
interfaces/Attachment/: index.html
interfaces/Board/: index.html
interfaces/BoardMembership/: index.html
interfaces/Card/: index.html
interfaces/CardLabel/: index.html
interfaces/CardMembership/: index.html
interfaces/CardSubscription/: index.html
interfaces/IdentityProviderUser/: index.html
interfaces/Label/: index.html
interfaces/List/: index.html
interfaces/Notification/: index.html
interfaces/Planka/: index.html
interfaces/Project/: index.html
interfaces/ProjectManager/: index.html
interfaces/Stopwatch/: index.html
plankapy/: __init__.py  constants.py  handlers.py  helpers.py  interfaces.py  models.py  plankapy.py  routes.py
recipes/: index.html
search/: search_index.json
tests/: __init__.py  card_builder.py  interface_tests.py  model_tests.py  plankapy_tests.py  test_all.py  test_hints.py  test_interfaces_ai.py  test_models.py  test_models_ai.py  v2_testing.py
usage/: index.html
(+194 files in other folders)
